Name:               generic-k
Version:            0.1.2
Synopsis:           Convert Haskell values into K terms and vice versa
Description:        This library provides generic functions that lower
                    and raise Haskell values into and out of the 
                    K Semantic Framework.
Homepage:           https://github.com/davidlazar/generic-k
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Data
Build-type:         Simple
Cabal-version:      >=1.2
Extra-source-files:
  README.md

source-repository head
  Type:             git
  Location:         https://github.com/davidlazar/generic-k

Library
  Hs-source-dirs:   src

  Exposed-modules:
    Data.Generics.K
    Data.Generics.K.ToK
    Data.Generics.K.FromK

  Build-depends:
    base >= 4 && < 5, 
    syb,
    language-k >= 0.2.0,
    haskell-src-exts
